--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     		outClass: 'fade-out-up-sm',
 			inDuration: 1500,
 			outDuration: 800,
-			linkElement: '.animsition',
+			linkElement: '.animsition a',
 			// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
 			loading: true,
 			loadingParentElement: 'body', //animsition wrapper element
@@ -89,7 +89,7 @@
 				<a class="headerContact animsition-link" href="contact.html"><div class="headerText">Contact</div></a>
 			</div>
 		</div>
-		<a id="Pangea" class="tile animsition-link" href="andrewthompson.me/pangea.html">
+		<a id="Pangea" class="tile animsition-link" href="pangea.html">
 			<div class="hoverTitle">Pangea.app</div>
 		</a>
 		<a id="Unicef" class="tile animsition-link" href="unicef">
