--- a/unicef.html
+++ b/unicef.html
@@ -55,9 +55,9 @@
 		$(".animsition").animsition({
 			inClass: 'fade-in-up-sm',
     		outClass: 'fade-out-up-sm',
-			inDuration: 1500,
+			inDuration: 800,
 			outDuration: 800,
-			linkElement: '.animsition',
+			linkElement: '.animsition a',
 			// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
 			loading: true,
 			loadingParentElement: 'body', //animsition wrapper element
