--- a/moveout.html
+++ b/moveout.html
@@ -59,7 +59,7 @@
     		outClass: 'fade-out-up-sm',
 			inDuration: 800,
 			outDuration: 800,
-			linkElement: '.animsition a',
+			linkElement: '.animsition-link',
 			// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
 			loading: true,
 			loadingParentElement: 'body', //animsition wrapper element
