added class to #link

--- a/unicef.html
+++ b/unicef.html
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 		<div id="name">UNICEF Kid Power Bands</div>
-		<div id="link"><a class="link" href="https://www.dropbox.com/s/ftkvcvgoaz1m2up/Unicef%20Final%20Keynote.pdf?dl=0">Slidedeck</a></div>
+		<div id="link"><a class="link animsition-link" href="https://www.dropbox.com/s/ftkvcvgoaz1m2up/Unicef%20Final%20Keynote.pdf?dl=0">Slidedeck</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
 			<p>Convince parents to buy Unicef Kid Power Bands for their children for their own sake and that of kids world-wide.</p>
