--- a/os.html
+++ b/os.html
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 		<div id="name">Ocean Spray</div>
-		<div id="link"><a class="link" href="https://www.dropbox.com/s/ot4bx54ja9bgvua/NSAC2018_TEAM325_OceanSpray_FinalPlansBook.pdf?dl=0">Plansbook</a></div>
+		<div id="link"><a class="link animsition-link" href="https://www.dropbox.com/s/ot4bx54ja9bgvua/NSAC2018_TEAM325_OceanSpray_FinalPlansBook.pdf?dl=0">Plansbook</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>Ask</h3>
 			<p>Create a fully integrated campaign to get millenials to eat and drink cranberries. Oh, and make it snappy.</p>
