--- a/pangea.html
+++ b/pangea.html
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 		<div id="name">Pangea.app</div>
-		<div id="link"><a class="link" href="https://www.pangea.app">Website</a></div>
+		<div id="link"><a class="link animsition-link" href="https://www.pangea.app">Website</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
 			<p>Build (and market) an app that lets students compete in the freelancing landscape to give them a leg up in our evolving workspace. Help show off the skills they have to land them the jobs they deserve. And along the way, help them make a buck or two.</p>
