--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 		</div>
 		<div id="headshot"></div>
 		<div id="bio">
-			Hi, I'm Andrew, and I like to think I can design. I have an unhealthy love for RGB hex codes, Muji, and Italian soda from Trader Joes. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br><br> 
+			Hi, I'm Andrew, and I like to think I can design. I have an unhealthy love for RGB hex codes, Muji notebooks, and Italian soda from Trader Joes. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br><br> 
 			I think of myself as a minimalist urbanist, which is a way of saying that I don't care how big or small the city I live in is&mdash;so I'm happy everywhere from NYC to Providence. And, most of all, I'm passionate about history and finding out where things come from (and how they got here).  
 		</div>
 		<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of despair.</div>
