Now I'm one being and not many

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<a id="Unicef" class="tile animsition-link" href="unicef">
 			<div class="hoverTitle">UNICEF</div>
 		</a>
-		<div id="tag"><div class="tag">Andrew Thompson is an Advertising major at Johnson & Wales University in Providence, RI. He specializes in UI/UX and Graphic Design.</div></div>
+		<div id="tag"><div class="tag">I'm an Advertising major at Johnson & Wales University in Providence, RI. I specializes in UI/UX and Graphic Design.</div></div>
 		<a id="OS" class="tile animsition-link" href="os">
 			<div class="hoverTitle">Ocean Spray</div>
 		</a>
