--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
 			<li><a class="animsition-link" href="mailto:me@andrewthompson.me?Subject=Hey!">Email</a></li>
 			<li><a class="animsition-link" href="https://www.instagram.com/andrew_thhompson/">Instagram</a></li>
 			<li>1.860.994.2748</li>
-			<li><a class="animsition-link" href="https://www.dropbox.com/s/32vh9c11m0jtoih/Andrew%20Thompson%20Resume%202019.pdf?dl=0">Resume</a></li>
+			<li><a class="animsition-link" href="https://www.dropbox.com/s/g1pn57kiw86erq9/Andrew%20Thompson%20Resume.pdf?dl=0">Resume</a></li>
 		</ul></div>
 		
 	</div>
