Copy and speed fixes

--- a/bhddh.html
+++ b/bhddh.html
@@ -62,8 +62,8 @@
 			loadingParentElement: 'body', //animsition wrapper element
 			loadingClass: 'animsition-loading',
 			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: false,
-			timeoutCountdown: 5000,
+			timeout: true,
+			timeoutCountdown: 0,
 			onLoadEvent: true,
 			browser: [ 'animation-duration', '-webkit-animation-duration'],
 			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -90,19 +90,15 @@
 		<div id="name">BHDDH</div>
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
-			<p>Rebrand a government entity with no brand image and a logo made in Microsoft Publisher. Bring the department from the 19th centurn into the 21st with a brand image that screams cutting edge.</p>
+			<p>Rebrand a state mental health department with no brand recognition, taking it from the 19th century into the 21st. And let's not forget the logo that was made in Microsoft Publisher.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>We crafted a logo that links the towns of lil Rhody by silicon, emphasizing a commitement to reconnecting communities with cutting edge mental health medicine.</p>
-		</div>
-		<div id="execution" class="copyBlock">
-			<h3>Execution</h3>
-			<p>The towns of Rhode Island are interconnected by silicon-like links, denoting a commitment to the future of mental health medicine. Horizontal lines are introduced as an element that allows the logo to adapt to a variety of placements.</p>
+			<p>Starting with the revamp of their logo that links the towns of Rhode Island, we rebranded BHDDH as a cutting edge mental health department that is all about reconnecting communities.</p>
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>The Results</h3>
-			<p>Rebrand was presented to the client. They are currently in the process of choosing their new brand identity from a pool presented by students from this class.</p>
+			<p>Rebrand was presented to the client alongside other teams. They are currently in the process of choosing which brand identity to adopt.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
