--- a/os.html
+++ b/os.html
@@ -71,8 +71,8 @@
 			loadingParentElement: 'body', //animsition wrapper element
 			loadingClass: 'animsition-loading',
 			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: false,
-			timeoutCountdown: 5000,
+			timeout: true,
+			timeoutCountdown: 0,
 			onLoadEvent: true,
 			browser: [ 'animation-duration', '-webkit-animation-duration'],
 			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -100,19 +100,15 @@
 		<div id="link"><a class="link animsition-link" href="https://www.dropbox.com/s/ot4bx54ja9bgvua/NSAC2018_TEAM325_OceanSpray_FinalPlansBook.pdf?dl=0">Plansbook</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>Ask</h3>
-			<p>Create a fully integrated campaign to get millenials to eat and drink cranberries. Oh, and make it snappy.</p>
+			<p>Create a fully integrated marketing campaign to get millennials to eat and drink more cranberry products. Oh, and don't get bogged down by it.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>Answer</h3>
 			<p>Show them how they can add different to their day, from cran-orange drinks in the morning to craisins for the after-work commute.</p>
 		</div>
-		<div id="execution" class="copyBlock">
-			<h3>Execution</h3>
-			<p>We emphasized the power of the cranberry to change your day by adding in a "nimbus" around models and products alike. Creative shown is a combination of unused concepts and finished work.</p>
-		</div>
 		<div id="results" class="copyBlock">
 			<h3>Results</h3>
-			<p>Final campaign was presented as part of the 2018 NSAC. Placed 1st in New England District Competition, and 9th nationally in the Semifinals.</p>
+			<p>Our final campaign was presented as part of the 2018 National Student Advertising Competition. Placed 1st in the New England District Competition, and 9th nationally during Semifinals.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
