--- a/pangea.html
+++ b/pangea.html
@@ -63,8 +63,8 @@
 			loadingParentElement: 'body', //animsition wrapper element
 			loadingClass: 'animsition-loading',
 			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: false,
-			timeoutCountdown: 5000,
+			timeout: true,
+			timeoutCountdown: 0,
 			onLoadEvent: true,
 			browser: [ 'animation-duration', '-webkit-animation-duration'],
 			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -92,19 +92,15 @@
 		<div id="link"><a class="link animsition-link" href="https://www.pangea.app">Website</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
-			<p>Build (and market) an app that lets students compete in the freelancing landscape to give them a leg up in our evolving workspace. Help show off the skills they have to land them the jobs they deserve. And along the way, help them make a buck or two.</p>
+			<p>Build (and market) an app that helps students show off the skills they have & land them the jobs they deserve. And along the way, help them make a buck or two.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>Show that students can do more than just their major. Ads run the gamut between general awareness and conversion for the Fall Competition, which drove students to sign up their friends in exchange for a cash prize. All executions shown were produced and run.</p>
-		</div>
-		<div id="execution" class="copyBlock">
-			<h3>Execution</h3>
-			<p>Ads run the gamut between general awareness and conversion for the Fall Competition, which drove students to sign up their friends in exchange for a cash prize. All executions shown were produced and run.</p>
+			<p>Created a brand with a look unlike any other in the city, with soft colors and fun, quippy copy. Our ads are made for the places that college students frequent: spots around campus and around social media.</p>
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>The Results</h3>
-			<p>Recent executions support the relaunch of the third design, coming up in March. Fall Competition was the single biggest driver of signups in the company's history, attracting hundreds of new users.</p>
+			<p>Grew signups by 300%. Additionally, these executions support the new relaunch of the app, (which you check out <a href='https://itunes.apple.com/us/app/pangea-app/id1278002444?mt=8'>here</a>).</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
