--- a/unicef.html
+++ b/unicef.html
@@ -63,8 +63,8 @@
 			loadingParentElement: 'body', //animsition wrapper element
 			loadingClass: 'animsition-loading',
 			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: false,
-			timeoutCountdown: 5000,
+			timeout: true,
+			timeoutCountdown: 0,
 			onLoadEvent: true,
 			browser: [ 'animation-duration', '-webkit-animation-duration'],
 			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -92,19 +92,15 @@
 		<div id="link"><a class="link animsition-link" href="https://www.dropbox.com/s/ftkvcvgoaz1m2up/Unicef%20Final%20Keynote.pdf?dl=0">Slidedeck</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
-			<p>Convince parents to buy Unicef Kid Power Bands for their children for their own sake and that of kids world-wide.</p>
+			<p>Convince parents to let their kids save the world with a pedometer that turns steps into meals for children world-wide.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>Show them how their kids can change the world from as far away as the park down the block.</p>
-		</div>
-		<div id="execution" class="copyBlock">
-			<h3>Execution</h3>
-			<p>We split the difference between portraying the places that children play and the children themselves, emphasizing the idea of "kid power". Outdoor ads are more visual focused, while magazine ads are supported by body copy.</p>
+			<p>We show parents the power their children can have. Kids are highlighted as the hero in each ad and we fuse the world of the app with the world around them, showcasing how the product can make the world a better place.</p>
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>The Results</h3>
-			<p>Received a near-perfect grade. This campaign is now an example of student work for the Johnson & Wales University Advertising program.</p>
+			<p>This campaign is now used as an example of exemplary student work for the Johnson & Wales University Advertising major for prospective students. Also, only two points away from that perfect 100 grade.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
