--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
 			loadingParentElement: 'body', //animsition wrapper element
 			loadingClass: 'animsition-loading',
 			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: false,
-			timeoutCountdown: 5000,
+			timeout: true,
+			timeoutCountdown: 0,
 			onLoadEvent: true,
 			browser: [ 'animation-duration', '-webkit-animation-duration'],
 			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -91,8 +91,8 @@
 		</div>
 		<div id="headshot"></div>
 		<div id="bio">
-			Hi, I'm Andrew, and I like to think I can design. I have an unhealthy love for RGB hex codes, Muji notebooks, and Italian soda from Trader Joes. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br><br> 
-			I think of myself as a minimalist urbanist, which is a way of saying that I don't care how big or small the city I live in is&mdash;so I'm happy everywhere from NYC to Providence. And, most of all, I'm passionate about history and finding out where things come from (and how they got here).  
+			Hi, I'm Andrew, and I like to design stuff. I have an unhealthy love for RGB hex codes, Muji notebooks, and Italian soda from Trader Joe’s. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br><br> 
+			I like to think of myself as a minimalist urbanist&mdash;which is just a fancy way of saying that I don't care how big or small the city I live in is. So I'm happy anywhere from NYC to Providence. But what I like to geek out over the most, is history. Finding out where things come from and how they got there is my shit. 
 		</div>
 		<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of despair.</div>
 	</div>
