--- a/moveout.html
+++ b/moveout.html
@@ -65,8 +65,8 @@
 			loadingParentElement: 'body', //animsition wrapper element
 			loadingClass: 'animsition-loading',
 			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: false,
-			timeoutCountdown: 5000,
+			timeout: true,
+			timeoutCountdown: 0,
 			onLoadEvent: true,
 			browser: [ 'animation-duration', '-webkit-animation-duration'],
 			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -94,19 +94,15 @@
 <!--		<div id="link"><a class="link" href="https://www.pangea.app">Slidedeck</a></div>-->
 		<div id="ask" class="copyBlock">
 			<h3>The Ask</h3>
-			<p>Get students to donate the dorm furniture they've coexisted with for the past 9 months.</p>
+			<p>Get students to donate their dorm furniture before move out instead of throwing it all away.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>Make it an easy breakup and let your unwanted alarm clock, tv, or couch live a second life. We brought recycling to the point of trash conversion, reminding </p>
-		</div>
-		<div id="execution" class="copyBlock">
-			<h3>Execution</h3>
-			<p>Posters were placed at points of conversion, like dumpsters and dorm building entrances. Social images were posted to JWU official accounts on instagram, twitter, and facebook.</p>
+			<p>We brought recycling to the point of trash conversion, reminding students that there's a second option. Make it an easy breakup and let your unwanted alarm clock, tv, or couch live a second life.</p>
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>The Results</h3>
-			<p>This campaign was used by Johnson & Wales University for a month at the end of the school year. Campaign as a whole was covered by multiple local news networks.</p>
+			<p>Campaign was run by Johnson & Wales University at the end of the school year. These efforts were covered by multiple local news outlets on move out day.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
