--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	</script>
 
 	
-	<title>Andrew Thompson | About</title>
+	<title>Andrew Thompson | Contact</title>
 	
 	<link rel="stylesheet" type="text/css" href="main.css">
 	
