New Content October 2019

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
 				<a class="headerContact animsition-link" href="contact.html"><div class="headerText">Contact</div></a>
 			</div>
 		</div>
+		<a id="Unplug" class="tile animsition-link" href="unplug.html">
+			<div class="hoverTitle">Unplug</div>
+		</a>
+		<a id="ATT" class="tile animsition-link" href="att.html">
+			<div class="hoverTitle">AT&T</div>
+		</a>
+		<a id="ws" class="tile animsition-link" href="ws.html">
+			<div class="hoverTitle">Wienerschnitzel</div>
+		</a>
+		<a id="Dunkin" class="tile animsition-link" href="dunkin.html">
+			<div class="hoverTitle">Dunkin'</div>
+		</a>
 		<a id="Pangea" class="tile animsition-link" href="pangea.html">
 			<div class="hoverTitle">Pangea.app</div>
 		</a>
