--- a/os.html
+++ b/os.html
@@ -130,7 +130,8 @@
 			</div>
 		</div> </div>
 		<div id="footContainer">
-			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <b>Ocean Spray</b> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
+			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unplug.html">Unplug</a> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <b>Ocean Spray</b> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
+			
 			<div id="friends"><b>Lorianna Logan</b>&mdash;Writing<br><b>Sydney Gray</b>&mdash;Writing<br><b>Lindsay Saiia</b>&mdash;Writing<br><b>Andrew Morner</b>&mdash;Design<br><b>Arianna Iacovelli</b>&mdash;Design<br><b>Manal Jakhar</b>&mdash;Photography</div>
 		</div>
 	</div>
