--- a/pangea.html
+++ b/pangea.html
@@ -113,8 +113,9 @@
 			</div>
 		</div> </div>
 		<div id="footContainer">
-			<div id="portfolioLinks"><b>Pangea.app</b> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
-			<div id="friends"><b>Adam Alpert</b>&mdash;CEO<br><b>John Tambunting</b>&mdash;CTO<br><b>Kristen Mashikian</b>&mdash;VP of Engineering</div>
+			<div id="portfolioLinks"><b>Pangea.app</b> | <a class="animsition-link" href="unplug.html">Unplug</a> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
+			
+			<div id="friends"><b>Adam Alpert</b>&mdash;CEO<br><b>John Tambunting</b>&mdash;CTO<br><b>Scott Bagley</b>&mdash;Head of Marketing<br><b>Kristen Mashikian</b>&mdash;(former) Engineering</div>
 		</div>
 	</div>
 </body>
