--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 			<li><a class="animsition-link" href="mailto:me@andrewthompson.me?Subject=Hey!">Email</a></li>
 			<li><a class="animsition-link" href="https://www.instagram.com/andrew_thhompson/">Instagram</a></li>
 			<li>1.860.994.2748</li>
-			<li><a class="animsition-link" href="https://www.dropbox.com/s/g1pn57kiw86erq9/Andrew%20Thompson%20Resume.pdf?dl=0">Resume</a></li>
+			<li><a class="animsition-link" href="https://www.dropbox.com/s/lvhwlztipm4riur/Andrew%20Thompson%20%E2%80%94%20Resume.pdf?dl=0">Resume</a></li>
 		</ul></div>
 		
 	</div>
