--- a/att.html
+++ b/att.html
@@ -100,7 +100,7 @@
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>Results</h3>
-			<p>The satisfaction of a job well done. Plus some kudos along the way.</p>
+			<p>Various pieces were produced, including a nationwide retail display for AT&T stores. Also got called "one of the best interns in the building" by a Project Manager. And it was a pretty big building.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
@@ -117,7 +117,7 @@
 		<div id="footContainer">
 			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unplug.html">Unplug</a> | <b>AT&T</b> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
 			
-			<div id="friends"><b>Lindsay Saiia</b>&mdash;Copywriter<br><b>Jess Andrews</b>&mdash;ACD/Art Director<br><b>Anshumani Khanna </b>&mdash;ACD/Copywriter<br><b>Natalie Taylor</b>&mdash;Project Manager</div>
+			<div id="friends"><b>Lindsay Saiia</b>&mdash;Copywriter<br><b>Jess Andrews</b>&mdash;ACD/Art Director<br><b>Anshumani Khanna </b>&mdash;ACD/Copywriter<br><b>Natalie Taylor</b>&mdash;Project Manager<br><b>Peter Sholley</b>&mdash;Project Manager<br><b>Oyinda Oluwa</b>&mdash;Sr Copywriter<br><b>Ryan Harper</b>&mdash;Sr Art Director<br></div>
 		</div>
 	</div>
 </body>
