--- a/ar/test.html
+++ b/ar/test.html
@@ -1,19 +1,9 @@
 <!doctype HTML>
 <html>
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 	<body style='margin : 0px; overflow: hidden;'>
-<!--
-		<a-scene embedded arjs>
-			<a-marker preset="hiro">
-				<a-box position='vWidth vHeight 1' material='color: yellow;'></a-box>
-			</a-marker>
-		<a-entity camera></a-entity>
-		</a-scene>
--->
-		
-		
-		
 		<a-scene embedded arjs>
 			<a-assets>
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
@@ -21,21 +11,9 @@
 			
 			<a-marker preset="hiro">
 				<!-- Video -->
-				<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 -3" depth=".5"></a-video>
-
-				<!-- Left Button -->
-				<a-link href="https://www.google.com">
-					<a-box width="1.5" height=".75" position="-2 -2.5 -3" color="#009fdb" depth=".5"></a-box>
-				</a-link>
-
-				<!-- Right Button -->
-				<a-link href="https://www.bing.com">
-					<a-box width="1.5" height=".75" position="2 -2.5 -3" color="#009fdb" depth=".5"></a-box>
-				</a-link>
+				<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 3"></a-video>
 			</a-marker>
 			<a-entity camera></a-entity>
 		</a-scene>
-		
-		
 	</body>
 </html>
