--- a/ar/test.html
+++ b/ar/test.html
@@ -3,6 +3,21 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
+	
+	<script>
+		var vid = document.getElementById("frank-ocean");
+
+		function playVid() {
+			vid.play();
+		}
+
+		function pauseVid() {
+			vid.pause();
+		}
+	</script>
+	
+	
+	
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
 			<a-assets>
@@ -15,5 +30,8 @@
 			</a-marker>
 			<a-entity camera></a-entity>
 		</a-scene>
+		
+		
+		<button style="width: 80vw; height: 10vh; position: fixed; bottom: 5vh; left: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: 2em;" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 	</body>
 </html>
