--- a/ar/test.html
+++ b/ar/test.html
@@ -24,7 +24,7 @@
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 			</a-assets>
 			
-			<a-marker preset="hiro">
+			<a-marker preset="hiro" size="4">
 				<!-- Video -->
 				<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 3"></a-video>
 			</a-marker>
