--- a/ar/test.html
+++ b/ar/test.html
@@ -25,8 +25,11 @@
 			</a-assets>
 			
 			<a-marker preset="hiro" size="4">
+				<a-box width="4" height="2.25" position="0 0 .375" depth=".25" color="#342E37"></a-box>
+				
 				<!-- Video -->
-				<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 3"></a-video>
+				<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 .5"></a-video>
+				
 			</a-marker>
 			<a-entity camera></a-entity>
 		</a-scene>
