--- a/ar/test.html
+++ b/ar/test.html
@@ -6,18 +6,18 @@
 	
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
+			<a-box width="4" height="2.25" position="0 0 .375" depth=".25" color="#342E37"></a-box>
 			<a-assets>
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 			</a-assets>
 			
-			<a-marker preset="hiro" size="4">
-				<a-box width="4" height="2.25" position="0 .375 0" depth=".25" color="#342E37"></a-box>
-				
-				<!-- Video -->
-				<a-video src="#frank-ocean" width="4" height="2.25" position="0 .5 0"></a-video>
-				
-			</a-marker>
-			<a-entity camera></a-entity>
+			<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 .5"></a-video>
+			
+<!--			<a-marker preset="hiro" size="4">-->
+		
+<!--			</a-marker>-->
+<!--			<a-entity camera></a-entity>-->
+			<a-marker-camera preset="hiro"></a-marker-camera>
 		</a-scene>
 		
 		
