--- a/ar/test.html
+++ b/ar/test.html
@@ -6,12 +6,12 @@
 	
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
-			<a-box width="4" height="2.25" position="0 0 .375" depth=".25" color="#342E37"></a-box>
+			<a-box width="4" depth="2.25" height=".25" position="0 0 .375" color="#342E37"></a-box>
 			<a-assets>
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 			</a-assets>
 			
-			<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 .5"></a-video>
+			<a-video src="#frank-ocean" width="4" depth="2.25" height=".25" position="0 0 .5"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
 		
