--- a/ar/test.html
+++ b/ar/test.html
@@ -6,7 +6,7 @@
 	
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
-			<a-box width="4" depth="2.25" height=".25" position="0 0 .375" color="#342E37"></a-box>
+<!--			<a-box width="4" depth="2.25" height=".25" position="0 0 .375" color="#342E37"></a-box>-->
 			<a-assets>
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 			</a-assets>
