--- a/ar/test.html
+++ b/ar/test.html
@@ -22,5 +22,7 @@
 		
 		
 		<button style="width: 80vw; height: 10vh; position: fixed; bottom: 5vh; left: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: 2em;" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
+		
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 2em;">Version 1</div>
 	</body>
 </html>
