--- a/ar/test.html
+++ b/ar/test.html
@@ -11,7 +11,7 @@
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 			</a-assets>
 			
-			<a-video src="#frank-ocean" width="4" height="2.25" position="0 0 .5" rotation="-90 0 0"></a-video>
+			<a-video src="#frank-ocean" width="1" height=".5625" position="0 0 .25" rotation="-90 0 0"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
 		
@@ -23,6 +23,6 @@
 		
 		<button style="width: 80vw; height: 10vh; position: fixed; bottom: 5vh; left: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: 2em;" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 2em;">Version 1</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center;">Version 1.1</div>
 	</body>
 </html>
