--- a/ar/test.html
+++ b/ar/test.html
@@ -5,6 +5,7 @@
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 	
 	<body style='margin : 0px; overflow: hidden;'>
+		<div style="height: 100vh; width: 100vw; position: fixed;">
 		<a-scene embedded arjs>
 <!--			<a-box width="4" depth="2.25" height=".25" position="0 0 .375" color="#342E37"></a-box>-->
 			<a-assets>
@@ -17,9 +18,10 @@
 		
 <!--			</a-marker>-->
 <!--			<a-entity camera></a-entity>-->
-			<a-marker-camera preset="hiro" size="10"></a-marker-camera>
-		</a-scene>
+			<a-marker-camera preset="hiro" smooth="true"></a-marker-camera>
+		</a-scene></div>
 		
+		<div style="position: absolute; height: 80vh; width: 100vw; border-radius: 20px; background-color: white; top: 80vh;">Recipes</div>
 		
 		<button style="width: 80vw; height: 10vh; position: fixed; bottom: 5vh; left: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: 2em;" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
