--- a/ar/test.html
+++ b/ar/test.html
@@ -21,10 +21,10 @@
 			<a-marker-camera preset="hiro" smooth="true"></a-marker-camera>
 		</a-scene></div>
 		
-		<div style="position: absolute; height: 80vh; width: 100vw; border-radius: 20px; background-color: white; top: 80vh;">Recipes</div>
+		<div style="position: absolute; height: 80vh; width: 100vw; border-radius: 20px; background-color: white; top: 60vh; z-index: 2000;">Recipes</div>
 		
 		<button style="width: 80vw; height: 10vh; position: fixed; bottom: 5vh; left: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: 2em;" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center;">Version 1.2</div>
+		<div style="width: 20vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.3</div>
 	</body>
 </html>
