--- a/ar/test.html
+++ b/ar/test.html
@@ -13,7 +13,7 @@
 				<img id="posardi-logo" src="posardi-logo-01.png">
 			</a-assets>
 			
-			<a-image src="#posardi-logo" width="1" height=".25" position="0 .5 .25" rotation="-90 0 0"></a-image>
+			<a-image src="#posardi-logo" width="1" height=".25" position="0 -1 .25" rotation="-90 0 0"></a-image>
 			<a-video src="#frank-ocean" width="1" height=".5625" position="0 0 .25" rotation="-90 0 0"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
@@ -28,6 +28,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.5</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.6</div>
 	</body>
 </html>
