oof this should work now

--- a/ar/test.html
+++ b/ar/test.html
@@ -20,7 +20,7 @@
 		
 <!--			</a-marker>-->
 <!--			<a-entity camera></a-entity>-->
-			<a-marker-camera type="pattern" url="posardi-pattern.png" smooth="true"></a-marker-camera>
+			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>
 		</a-scene>
 <!--		</div>-->
 		
