fix logo orientation

--- a/ar/test.html
+++ b/ar/test.html
@@ -13,7 +13,7 @@
 				<img id="posardi-logo" src="posardi-logo-01.png">
 			</a-assets>
 			
-			<a-image src="#posardi-logo" width="1" height=".25" position="1 0 .25" rotation="-90 0 0"></a-image>
+			<a-image src="#posardi-logo" width="1" height=".25" position="0 0 1" rotation="-90 0 0"></a-image>
 			<a-video src="#frank-ocean" width="1" height=".5625" position="0 0 .25" rotation="-90 0 0"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
