--- a/ar/test.html
+++ b/ar/test.html
@@ -4,6 +4,22 @@
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 	
+	<script>
+		var printedSize = 5.5;	// in inches
+		var ratio = 39.3701;	// in inches
+		
+		function inchesToMeters(inches) {
+			return (inches * ratio);
+		}
+		
+		function metersToInches(meters) {
+			return (meters / ratio);
+		}
+	</script>
+	
+	
+	
+	
 	<body style='margin : 0px; overflow: hidden;'>
 <!--		<div style="height: 100vh; width: 100vw; position: fixed;">-->
 		<a-scene embedded arjs>
@@ -13,8 +29,8 @@
 				<img id="posardi-logo" src="posardi-logo-01.png">
 			</a-assets>
 			
-			<a-image src="#posardi-logo" width="3" height=".75" position="0 .25 -.75" rotation="-90 0 0"></a-image>
-			<a-video src="#frank-ocean" width="3" height="1.6875" position="0 .25 .75" rotation="-90 0 0"></a-video>
+			<a-image src="#posardi-logo" width="3" height=".75" position=".25 0 -.75" rotation="-90 0 0"></a-image>
+			<a-video src="#frank-ocean" width="3" height="1.6875" position=".25 0 .75" rotation="-90 0 0"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
 		
@@ -28,6 +44,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.95</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.955</div>
 	</body>
 </html>
