--- a/ar/test.html
+++ b/ar/test.html
@@ -29,8 +29,8 @@
 				<img id="posardi-logo" src="posardi-logo-01.png">
 			</a-assets>
 			
-			<a-image src="#posardi-logo" width="3" height=".75" position=".0762 0 -.75" rotation="-90 0 0"></a-image>
-			<a-video src="#frank-ocean" width="3" height="1.6875" position=".0762 0 .75" rotation="-90 0 0"></a-video>
+			<a-image src="#posardi-logo" width="4" height="1" position=".0762 0 -.75" rotation="-90 0 0"></a-image>
+			<a-video src="#frank-ocean" width="4" height="2.25" position=".0762 0 1" rotation="-90 0 0"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
 		
@@ -44,6 +44,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.9555</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 2</div>
 	</body>
 </html>
