--- a/ar/test.html
+++ b/ar/test.html
@@ -3,6 +3,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	
 	<script>
 		var printedSize = 5.5;	// in inches
@@ -15,6 +16,8 @@
 		function metersToInches(meters) {
 			return (meters / ratio);
 		}
+		
+		
 	</script>
 	
 	
@@ -28,8 +31,9 @@
 				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 				<img id="posardi-logo" src="posardi-logo-01.png">
 			</a-assets>
-			
-			<a-image src="#posardi-logo" width="4" height="1" position=".0762 0 -.75" rotation="-90 0 0"></a-image>
+			<div id="test">
+				<a-image src="#posardi-logo" width="4" height="1" position=".0762 0 -.75" rotation="-90 0 0"></a-image>
+			</div>
 			<a-video src="#frank-ocean" width="4" height="2.25" position=".0762 0 1" rotation="-90 0 0"></a-video>
 			
 <!--			<a-marker preset="hiro" size="4">-->
@@ -44,6 +48,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 2</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.91</div>
 	</body>
 </html>
