--- a/ar/test.html
+++ b/ar/test.html
@@ -56,7 +56,7 @@
 		
 		
 		
-		$( document ).ready(function() {
+		$( document ).load(function() {
 			console.log( versionNum );
 			
 			logoBillboard(10, 2.5, 2, .25, "logo", "posardi-logo-01.png");
