--- a/ar/test.html
+++ b/ar/test.html
@@ -4,7 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	
 	<script>
-		var versionNum = "Version 2.2"
+		var versionNum = "Version 2.3"
 		var printedSize = 5.5;	// in inches
 		var ratio = 39.3701;	// in inches, for conversion to meters
 		var tvratio = .5625;	// convert width to height
@@ -19,36 +19,57 @@
 			return (meters / ratio);
 		}
 		
-		function videoBillboard (width, depth, offcenter, id, src) {
-			if (~id.indexOf("#")) {
-				id.replace("#","");
+		function videoBillboard (width, depth, offcenter) {
+//			if (~id.indexOf("#")) {
+//				id.replace("#","");
+//			}
+//			
+//			var height = width * tvratio;
+//			
+//			var output1 = "<video id='";
+//			output1.concat(id, "' autoplay loop='true' src='", src, "'></video>");
+//			$("a-assets").append(output1);
+//			
+//			var output2 = "<a-video src='#";
+//			output2.concat(id, "' width='", itm(width), "' height='", itm(height), "' position='", itm(depth), " 0 " , itm(offcenter),"' rotation='-90 0 0'></a-video>");	
+//			$("a-scene").append(output1);
+//			return;
+			
+			if (!(~id.indexOf("#")) {
+				var tempString = "";
+				tempString.concat("#", id);
+				id = tempString;
 			}
-			
+		
 			var height = width * tvratio;
-			
-			var output1 = "<video id='";
-			output1.concat(id, "' autoplay loop='true' src='", src, "'></video>");
-			$("a-assets").append(output1);
-			
-			var output2 = "<a-video src='#";
-			output2.concat(id, "' width='", itm(width), "' height='", itm(height), "' position='", itm(depth), " 0 " , itm(offcenter),"' rotation='-90 0 0'></a-video>");	
-			$("a-scene").append(output1);
+		
+			var positionString = "";
+			positionString.concat(itm(depth), " 0 ", (-1 * itm(offcenter));
+		
+			$('a-video').css('width', itm(width)).css('height', itm(height)).css('position', positionString);
 			return;
 		}
 		
-		function logoBillboard (width, height, depth, offcenter, id, src) {
-			if (~id.indexOf("#")) {
-				id.replace("#","");
+		function logoBillboard (width, height, depth, offcenter) {
+			if (!(~id.indexOf("#")) {
+				var tempString = "";
+				tempString.concat("#", id);
+				id = tempString;
 			}
-			
-			var output1 = "<img id='";
-			output1.concat(id, "' src='", src, "'>");
-			$("a-assets").append(output1);
-			
-			var output2 = "<a-image src='#";
-			output2.concat(id, "' width='", itm(width), "' height='", itm(height), "' position='", itm(depth), " 0 " , (-1 * itm(offcenter)),"' rotation='-90 0 0'></a-image>");	
-			$("a-scene").append(output1);
-			return;
+		
+			var positionString = "";
+			positionString.concat(itm(depth), " 0 ", (-1 * itm(offcenter));
+		
+			$('a-image').css('width', itm(width)).css('height', itm(height)).css('position', positionString);
+		
+//			var output1 = "<img id='";
+//			output1.concat(id, "' src='", src, "'>");
+//			$("a-assets").append(output1);
+//			
+//			var output2 = "<a-image src='#";
+//			output2.concat(id, "' width='", itm(width), "' height='", itm(height), "' position='", itm(depth), " 0 " , (-1 * itm(offcenter)),"' rotation='-90 0 0'></a-image>");	
+//			$("a-scene").append(output1);
+//			return;
 		}
 		
 		
@@ -69,19 +90,19 @@
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
 			<a-assets>
-<!--				<img id="posardi-logo" src="posardi-logo-01.png">-->
-<!--				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>-->
+				<img id="posardi-logo" src="posardi-logo-01.png">
+				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
 			</a-assets>
 			
 			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>
 			
-<!--			<a-image src="#posardi-logo" width="4" height="1" position=".0762 0 -.75" rotation="-90 0 0"></a-image>-->
-<!--			<a-video src="#frank-ocean" width="4" height="2.25" position=".0762 0 1" rotation="-90 0 0"></a-video>-->
+			<a-image src="#posardi-logo" width="4" height="1" position=".0762 0 -.75" rotation="-90 0 0"></a-image>
+			<a-video src="#frank-ocean" width="4" height="2.25" position=".0762 0 1" rotation="-90 0 0"></a-video>
 			
 		</a-scene>
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 2</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 2.3</div>
 	</body>
 </html>
