--- a/ar/test.html
+++ b/ar/test.html
@@ -6,17 +6,17 @@
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 		
-	
-	
-	
-	
-	
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
+			<a-assets>
+				<img id="posardi-logo" src="posardi-logo-01.png">
+				<video id="frank-ocean" autoplay loop="true" src="dearapril.mp4"></video>
+			</a-assets>
 			
 			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>
 			
-			<a-sphere color="black" position="0 1.6 0" animation="property: position; to: 0 0 0; dur: 500; easing: easeInOutQuint; loop: true;"></a-sphere>
+			<a-image src="#posardi-logo" width="4" height="1" position=".0762 0 -.75" rotation="-90 0 0"></a-image>
+			<a-video src="#frank-ocean" width="4" height="2.25" position=".0762 0 1" rotation="-90 0 0"></a-video>
 			
 		</a-scene>
 		
