--- a/ar/test.html
+++ b/ar/test.html
@@ -19,7 +19,7 @@
 			<a-image src="#posardi-logo" width="4" height="1" position=".035 0 -.75" rotation="-90 0 0"></a-image>
 			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>
 			</a-marker>
-			<a-entity camera></a-camera>
+			<a-entity camera></a-entity>
 		</a-scene>
 			
 		
