--- a/ar/test.html
+++ b/ar/test.html
@@ -8,23 +8,28 @@
 		
 	<body style='margin : 0px; overflow: hidden;'>
 		<a-scene embedded arjs>
-			<a-marker type="pattern" url="posardi.patt" smooth="true">
+<!--			<a-marker type="pattern" url="posardi.patt" smooth="true">-->
 			<a-assets>
 				<img id="posardi-logo" src="posardi-logo-01.png">
 				<video id="video1" autoplay loop="true" src="sardo.mp4"></video>
 			</a-assets>
 			
-<!--			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>-->
+			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>
 			
-			<a-image src="#posardi-logo" width="4" height="1" position=".035 0 -.75" rotation="-90 0 0"></a-image>
-			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>
-			</a-marker>
-			<a-entity camera></a-entity>
+<!--			<a-image src="#posardi-logo" width="4" height="1" position=".035 0 -.75" rotation="-90 0 0"></a-image>-->
+<!--			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>-->
+			
+
+			<a-cylinder color="white" material="side: double" open-ended="true" rotation="90 0 0" radius=".5" height="1" position="-.5 0 0"></a-cylinder>
+			
+			
+<!--			</a-marker>-->
+<!--			<a-entity camera></a-entity>-->
 		</a-scene>
 			
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 2</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 3</div>
 	</body>
 </html>
