--- a/ar/test.html
+++ b/ar/test.html
@@ -20,7 +20,7 @@
 <!--			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>-->
 			
 
-			<a-cylinder color="white" material="side: double" open-ended="true" radius=".5" height="1" position="-.5 0 0"></a-cylinder>
+			<a-cylinder color="white" radius=".5" height=".1" position="-.05 0 0"></a-cylinder>
 			
 			
 <!--			</a-marker>-->
