reverting version number to 1

--- a/ar/test.html
+++ b/ar/test.html
@@ -20,7 +20,7 @@
 <!--			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>-->
 			
 
-			<a-cylinder color="white" radius=".5" height=".1" position="-.05 0 0"></a-cylinder>
+			<a-cylinder color="white" radius=".5" height=".1" position="0 0 -.05"></a-cylinder>
 			
 			
 <!--			</a-marker>-->
@@ -30,6 +30,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 3</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1</div>
 	</body>
 </html>
