--- a/ar/test.html
+++ b/ar/test.html
@@ -5,8 +5,43 @@
 	
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
+	
+	<style>
+	
+		#loading {
+			background-image: url(posardi-loader.gif);
+			background-repeat: no-repeat;
+			background-size: cover;
+			
+			position: fixed;
+			height: 100%;
+			width: 100%;
+			padding: 0;
+			margin: 0;
+			
+			z-index: 2000;
+		}
+	
+	</style>
+	
+	
+	
 		
 	<body style='margin : 0px; overflow: hidden;'>
+		<div id="loading"></div>
+		
+		<script>
+			
+		AFRAME.registerComponent('arjs', {
+			init: function () {
+				// Code here.
+				console.log(this.el);
+				$("#loading").hide();
+			}
+		});
+			
+		</script>
+		
 		<a-scene embedded arjs>
 <!--			<a-marker type="pattern" url="posardi.patt" smooth="true">-->
 			<a-assets>
@@ -16,11 +51,11 @@
 			
 			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>
 			
-<!--			<a-image src="#posardi-logo" width="4" height="1" position=".035 0 -.75" rotation="-90 0 0"></a-image>-->
-<!--			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>-->
+			<a-image src="#posardi-logo" width="4" height="1" position=".035 0 -.75" rotation="-90 0 0"></a-image>
+			<a-video src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>
 			
 
-			<a-cylinder color="white" radius=".5" height=".1" position="0 0 -.05"></a-cylinder>
+<!--			<a-cylinder color="white" radius=".5" height=".1" position="0 0 -.05"></a-cylinder>-->
 			
 			
 <!--			</a-marker>-->
