--- a/ar/test.html
+++ b/ar/test.html
@@ -9,7 +9,7 @@
 	<style>
 	
 		#loading {
-			background-image: url(posardi-loader.gif);
+			background-image: url(loading.gif);
 			background-repeat: no-repeat;
 			background-size: cover;
 			
